--- a/package.json
+++ b/package.json
@@ -4,12 +4,23 @@
   "description": "![Screenshot of the home page of the site](/images/ScreenshotHomepage.png \"The home page\")",
   "main": "index.js",
   "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "npm run test-e2e-cli",
+    "test-e2e": "cypress open",
+    "test-e2e-report": "cypress run --reporter mochawesome",
+    "test-e2e-cli": "cypress run",
+    "test-jest": "jest"
   },
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "node.js": "^0.0.1-security"
+  },
+  "devDependencies": {
+    "cypress": "^13.13.2",
+    "eslint": "^9.8.0",
+    "eslint-plugin-cypress": "^3.4.0",
+    "eslint-plugin-jest": "^28.7.0",
+    "jest": "^29.7.0"
   }
 }
