--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
     "test-e2e": "cypress open",
     "test-e2e-report": "cypress run --reporter mochawesome",
     "test-e2e-cli": "cypress run",
-    "test-jest": "jest"
+    "test-unit": "jest"
   },
   "keywords": [],
   "author": "",
